# rust_test_redis

./: Cargo.toml  ReadMe.md
src/: main.rs  publisher.rs  subscriber.rs
