[package]
name = "rust_test_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.25.3"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3.15", default-features = false, optional = true }
